Complete payment entity