@@ -4,7 +4,6 @@ import com.paysystem.model.entities.Payment;
 import com.paysystem.repository.interfaces.PaymentInterface;
 import com.paysystem.utils.Crud;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -13,67 +12,87 @@ public class PaymentRepositoryImpl implements PaymentInterface {
 
     @Override
     public Optional<Payment> createPayment(Payment payment, String employeeEmail) {
-        int employeeId = Integer.parseInt(Crud.readByCondition("user", "email", employeeEmail).getFirst().get("id"));
-        if (employeeId == 0) {
-            return Optional.empty();
-        }
         try {
+            List<Map<String, String>> userResult = Crud.readByCondition("users", "email", employeeEmail);
+
+            if (userResult.isEmpty()) {
+                System.out.println("Employee not found with email: " + employeeEmail);
+                return Optional.empty();
+            }
+
+            int employeeId = Integer.parseInt(userResult.getFirst().get("id"));
+
             boolean isCreated = Crud.create("payments", Map.of(
                     "amount", payment.getAmount(),
                     "reason", payment.getReason(),
                     "agent_id", employeeId,
-                    "type", payment.getTypePayment()
+                    "type", payment.getTypePayment().name().toLowerCase()
             ));
+
             if (isCreated) {
+                payment.setEmployeeId(employeeId);
                 return Optional.of(payment);
             }
         } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Error creating payment: " + e.getMessage());
         }
         return Optional.empty();
     }
 
     @Override
     public Optional<Payment> updatePayment(Payment payment) {
-        Map<String, String> getPayment = Crud.readByCondition("payments", "id", payment.getPaymentId()).getFirst();
         try {
+            List<Map<String, String>> paymentResult = Crud.readByCondition("payments", "id", payment.getPaymentId());
+
+            if (paymentResult.isEmpty()) {
+                System.out.println("Payment not found");
+                return Optional.empty();
+            }
+
+            Map<String, String> existingPayment = paymentResult.getFirst();
+
             boolean isUpdated = Crud.update("payments", Map.of(
-                    "amount", payment.getAmount() != 0.0 ? payment.getAmount() : getPayment.get("amount"),
-                    "reason", !payment.getReason().isEmpty() ? payment.getAmount() : getPayment.get("amount"),
-                    "agent_id", !getPayment.get("agent_id").isEmpty() ? payment.getAmount() : getPayment.get("amount"),
-                    "type", payment.getTypePayment() != null ? payment.getAmount() : getPayment.get("amount")
-            ), "id", getPayment.get("id"));
+                    "amount", payment.getAmount(),
+                    "reason", payment.getReason(),
+                    "type", payment.getTypePayment().name().toLowerCase()
+            ), "id", payment.getPaymentId());
+
             if (isUpdated) {
                 return Optional.of(payment);
             }
         } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Error updating payment: " + e.getMessage());
         }
         return Optional.empty();
     }
 
     @Override
     public boolean deletePayment(Integer paymentId) {
-        boolean paymentExist = Integer.parseInt(Crud.readByCondition("payments", "id", paymentId).getFirst().get("id")) != 0;
         try {
-            if (paymentExist) {
-                return Crud.delete("payments", "id", paymentId);
+            List<Map<String, String>> paymentResult = Crud.readByCondition("payments", "id", paymentId);
+
+            if (paymentResult.isEmpty()) {
+                System.out.println("Payment not found");
+                return false;
             }
+
+            return Crud.delete("payments", "id", paymentId);
         } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Error deleting payment: " + e.getMessage());
+            return false;
         }
-        return false;
     }
 
     @Override
     public Map<String, String> getPaymentById(Integer paymentId) {
         try {
-            Map<String, String> getPayment = Crud.readByCondition("payments", "id", paymentId).getFirst();
-            if (!getPayment.isEmpty()) {
-                return getPayment;
+            List<Map<String, String>> paymentResult = Crud.readByCondition("payments", "id", paymentId);
+
+            if (!paymentResult.isEmpty()) {
+                return paymentResult.get(0);
             }
         } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Error retrieving payment: " + e.getMessage());
         }
         return null;
     }
@@ -83,7 +102,7 @@ public class PaymentRepositoryImpl implements PaymentInterface {
         try {
             return Crud.readAll("payments");
         } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Error retrieving all payments: " + e.getMessage());
         }
         return null;
     }
